--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,7 @@
 # Created by venv; see https://docs.python.org/3/library/venv.html
-# *
+venv/
+
 .env
 app/__pycache__
 faiss_local/
-lib/
-bin/
-pyvenv.cfg
-include/
 tmp/
