--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ beautifulsoup4==4.13.4
 bs4==0.0.2
 certifi==2025.6.15
 charset-normalizer==3.4.2
+click==8.2.1
 dataclasses-json==0.6.7
 distro==1.9.0
 faiss-cpu==1.11.0
@@ -54,5 +55,6 @@ typing-inspect==0.9.0
 typing-inspection==0.4.1
 typing_extensions==4.14.0
 urllib3==2.5.0
+uvicorn==0.35.0
 yarl==1.20.1
 zstandard==0.23.0
