--- a/requirements.txt
+++ b/requirements.txt
@@ -56,5 +56,6 @@ typing-inspection==0.4.1
 typing_extensions==4.14.0
 urllib3==2.5.0
 uvicorn==0.35.0
+websockets==15.0.1
 yarl==1.20.1
 zstandard==0.23.0
